<resources>
    <string name="app_name">EDFCompteur</string>
    <string name="Identification">Identification</string>
    <string name="ReleveCompteur">ReleveCompteur</string>
    <string name="EDF">EDF</string>
    <string name="ImportDonnees">ImportDonnees</string>
    <string name="Sauvegarde">Sauvegarde</string>
    <string name="Client">Client</string>
    <string name="Transfert">Transfert</string>
    <string name="add_word">Transfert</string>
    <string name="empty_not_saved">Client vide</string>
    <string name="id_client">Id du client</string>
    <string name="hint_nom_client">Nom du client</string>
    <string name="hint_prenom_client">Prénom du client</string>
    <string name="action_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_new_client">NewClientActivity</string>
    <string name="id_client_card">Id du client</string>
    <string name="hint_nom_client_card">Nom du client</string>
    <string name="hint_prenom_client_card">Prénom du client</string>
    <string name="identifiant">Identifiant</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="delete_word">Supprimer</string>
    <string name="maj_word">Mise à jour</string>
    <string name="textfield_label">MAJ ou Suppression Client</string>
    <string name="content_description_media">contentDescription</string>
    <string name="title">Client</string>
    <string name="secondary_text">Client second</string>
    <string name="supporting_text">Support texte</string>
    <string name="action_1">Gestion compteur</string>
    <string name="action_2">Relever un compteur</string>
    <string name="textview">Id Compteur</string>
    <string name="IdCompteur">Id Compteur</string>
    <string name="textviewAdresseCompteur">adresseCompteur</string>
    <string name="adresseCompteur">Adresse Compteur</string>
    <string name="idClientCompteur">idClientCompteur</string>
    <string name="ajoutercompteur">AjouterCompteur</string>
    <string name="id_compteur">ID Compteur</string>
</resources>