<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutCompteur"
            android:orientation="vertical">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/IdCompteur"
                android:ems="10"
                android:hint="@string/IdCompteur"
                android:id="@+id/editTextIdCompteur"
                android:autofillHints=""
                android:minHeight="48dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/adresseCompteur"
                android:ems="10"
                android:id="@+id/editTextAdresseCompteur" android:minHeight="48dp" android:autofillHints=""/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/idClientCompteur"
                android:ems="10"
                android:id="@+id/editTextIdClient" android:minHeight="48dp" android:autofillHints=""/>
    </LinearLayout>

</androidx.cardview.widget.CardView>